fix: maestro skill parralelization